change swagger subscription
