# docs/swagger.json
@@ -573,6 +573,14 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Telegram ID of the user",
                         "name": "telegramID",
                         "in": "path",
@@ -621,6 +629,14 @@
                 ],
                 "summary": "Get subscription by Telegram ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003ctoken\u003e",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Telegram ID of the user",
